9ae491c fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_zh.properties
+++ b/i18n/i18n_app_zh.properties
@@ -131,7 +131,7 @@ manage_favorites=\u7ba1\u7406\u559c\u597d
 map=\u5730\u56fe
 max=\u6700\u5927
 min=\u6700\u5c0f
-min_max_c=Min/max \u00b0C
+min_max_c=\u6700\u4f4e/\u6700\u9ad8 \u00b0C
 min_max_elevation=\u6700\u5927\u6700\u5c0f\u6d77\u62d4
 min_max_people=\u6700\u5927\u6700\u5c0f\u4eba\u6570
 min_max_rainfall=\u6700\u5927\u6700\u5c0f\u964d\u96e8\u91cf
