9962947 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_es_419.properties
+++ b/i18n/i18n_app_es_419.properties
@@ -93,7 +93,7 @@ invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
+last_3_months=\u00daltimos 3 meses
 last_4_quarters=Last 4 quarters
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
@@ -130,7 +130,7 @@ low_size=Low size
 manage_favorites=Manage favorites
 map=Map
 max=M\u00e1x
-min=Min
+min=M\u00ednimo
 min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
@@ -158,7 +158,7 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=Organisation unit
+organisation_unit=Unidad organizativa
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
 organisation_units=Organisation units
