--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -26,7 +26,7 @@ coordinate_field=Co\u00f6rdinatenveld
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Tel
-create=Create
+create=Cre\u00ebren
 created_by=Gecre\u00eberd door
 current_legends=Current legends
 daily=Dagelijks
