4fd4dc3 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_si.properties
+++ b/i18n/i18n_app_si.properties
@@ -8,7 +8,7 @@ allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=Average
+average=\u0dc3\u0dcf\u0db8\u0dcf\u0db1\u0dca\u200d\u0dba
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
@@ -30,7 +30,7 @@ create=Create
 created_by=Created by
 current_legends=Current legends
 daily=\u0daf\u0dd2\u0db1\u0db4\u0dad\u0dcf
-data=Data
+data=\u0daf\u0dad\u0dca\u0dad
 data_and_periods=Data and periods
 dataelement=Data element
 dataelement_group=Data element group
@@ -93,23 +93,23 @@ invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
+last_3_months=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0db8\u0dcf\u0dc3 3
 last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
+last_4_weeks=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0dc3\u0dad\u0dd2 4
 last_5_financial_years=Last 5 financial years
 last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
-last_12_months=Last 12 months
-last_12_weeks=Last 12 weeks
-last_52_weeks=Last 52 weeks
+last_6_months=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0db8\u0dcf\u0dc3 6
+last_12_months=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0db8\u0dcf\u0dc3 12
+last_12_weeks=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0dc3\u0dad\u0dd2 12
+last_52_weeks=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0dc3\u0dad\u0dd2 52
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=Last month
+last_month=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0db8\u0dcf\u0dc3\u0dba
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=Last week
-last_5_years=Last 5 years
-last_year=Last year
+last_week=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0dc3\u0dad\u0dd2\u0dba
+last_5_years=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba 5 \u0dc0\u0dc3\u0dbb
+last_year=\u0db4\u0dc3\u0dd4\u0d9c\u0dd2\u0dba \u0dc0\u0dc3\u0dbb
 latitude=Latitude
 layer=Layer
 layers=Layers
@@ -128,7 +128,7 @@ longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
-map=Map
+map=\u0dc3\u0dd2\u0dad\u0dd2\u0dba\u0db8
 max=\u0d8b\u0db4\u0dbb\u0dd2\u0db8
 min=\u0d85\u0dc0\u0db8
 min_max_c=Min/max \u00b0C
@@ -137,7 +137,7 @@ min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=\u0db8\u0dcf\u0dc3\u0dca\u0db4\u0dad\u0dcf
-name=Name
+name=\u0db1\u0db8
 next=Next
 nighttime_lights=Nighttime lights
 no=\u0db1\u0dd0\u0dad
@@ -210,7 +210,7 @@ select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
-select_year=Select year
+select_year=\u0dc0\u0dc3\u0dbb \u0dad\u0ddd\u0dbb\u0db1\u0dca\u0db1
 service_url=Service URL
 share=Share
 share_with_other_people=Share with others
@@ -230,7 +230,7 @@ steps=Steps
 style=Style
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=Sum
+sum=\u0d91\u0d9a\u0dad\u0dd4\u0dc0
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
 table=Table
@@ -243,11 +243,11 @@ thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
 this_financial_year=This financial year
-this_month=This month
+this_month=\u0db8\u0dd9\u0db8 \u0db8\u0dcf\u0dc3\u0dba
 this_quarter=This quarter
 this_sixmonth=This six-month
-this_week=This week
-this_year=This year
+this_week=\u0db8\u0dd9\u0db8 \u0dc3\u0dad\u0dd2\u0dba
+this_year=\u0db8\u0dd9\u0db8 \u0dc0\u0dc3\u0dbb
 time_since_last_data_update=Elapsed time since last data update
 today=\u0d85\u0daf
 totals=\u0d91\u0d9a\u0dad\u0dd4
