aea0579 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_si.properties
+++ b/i18n/i18n_app_si.properties
@@ -9,23 +9,23 @@ and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
 average=\u0dc3\u0dcf\u0db8\u0dcf\u0db1\u0dca\u200d\u0dba
-bimonthly=Bi-monthly
+bimonthly=\u0daf\u0dd9\u0db8\u0dc3\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca
 boundary_layer=Boundary layer
 by_data_element=By data element
 cancel=Cancel
-can_edit_and_view=Can edit and view
-can_view=Can view
+can_edit_and_view=\u0dc3\u0d82\u0dc3\u0dca\u0d9a\u0dbb\u0dab\u0dba\u0da7 \u0dc4\u0dcf \u0db1\u0dd0\u0dbb\u0db9\u0dd3\u0db8\u0da7\u0dc4\u0dd0\u0d9a
+can_view=\u0db1\u0dcf\u0dbb\u0db9\u0dd2\u0dba \u0dc4\u0dd0\u0d9a
 chart=Chart
 classes_method=Classes / method
 clear=Clear
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=\u0d9a\u0dda\u0dad \u0d9a\u0dbb\u0db1\u0dca\u0db1
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
+count=\u0d9c\u0dab\u0db1
 create=Create
 created_by=Created by
 current_legends=Current legends
@@ -38,7 +38,7 @@ dataset=Data set
 delete=\u0d89\u0dc0\u0dad\u0dca \u0d9a\u0dbb\u0db1\u0dca\u0db1
 delete_favorite=Delete favorite
 details=Details
-download=Download
+download=\u0db6\u0dcf\u0d9c\u0dad \u0d9a\u0dbb\u0db1\u0dca\u0db1
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
@@ -184,11 +184,11 @@ previous=Previous
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=\u0d9a\u0dcf\u0dbb\u0dca\u0dad\u0dd4 \u0db4\u0dad\u0dcf
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=\u0d89\u0dc0\u0dad\u0dca \u0d9a\u0dbb\u0db1\u0dca
+remove=\u0d89\u0dc0\u0dad\u0dca \u0d9a\u0dbb\u0db1\u0dca\u0db1
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
@@ -219,8 +219,8 @@ show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
-sixmonthly_april=Six-monthly April
+sixmonthly=6 \u0db8\u0dc3\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca
+sixmonthly_april=6 \u0db8\u0dc3\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca \u0d85\u0db4\u0dca\u200d\u0dbb\u0dda\u0dbd\u0dca
 stage=Stage
 start_date=Start date
 start_end_dates=Start/end dates
@@ -263,10 +263,10 @@ value_type=Value type
 variance=Variance
 version=Version
 weekly=\u0dc3\u0dad\u0dd2\u0db4\u0dad\u0dcf
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=\u0dc3\u0dad\u0dd2\u0dba\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca (Start Wednesday)
+weekly_thursday=\u0dc3\u0dad\u0dd2\u0dba\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca (Start Thursday)
+weekly_saturday=\u0dc3\u0dad\u0dd2\u0dba\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca (Start Saturday)
+weekly_sunday=\u0dc3\u0dad\u0dd2\u0dba\u0d9a\u0da7 \u0dc0\u0dbb\u0d9a\u0dca (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=\u0d85\u0dc0\u0dd4\u0dbb\u0dd4\u0daf\u0dd4 \u0db4\u0dad\u0dcf
