68a1844 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -1,6 +1,6 @@
 about=About
 add_legend=Add legend
-add_new=Add new
+add_new=Nieuw toevoegen
 address=Adres
 add_to_dashboard=Add to dashboard
 aggregation_type=Aggregatietype
@@ -17,7 +17,7 @@ can_edit_and_view=Kan bewerken en bezichtigen
 can_view=Can view
 chart=Grafiek
 classes_method=Classes / method
-clear=Clear
+clear=Duidelijk
 clear_map=Clear map
 clustering=Clustering
 code=Code
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=Hoge maat
-home=Home
+home=Thuis
 indicator=Indicator
 indicator_group=Indicatorgroep
 information=Information
@@ -138,7 +138,7 @@ min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Maandelijks
 name=Naam
-next=Next
+next=Volgende
 nighttime_lights=Nachtelijke lichten
 no=Nee
 no_groupset_selected=No group set selected
@@ -166,11 +166,11 @@ organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
-page=Page
+page=Bladzijde
 parent_unit=Boveliggende eenheid
 period=Periode
 period_type=Soort periode
-phone_number=Phone number
+phone_number=Telefoonnummer
 placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
