6edbcbb fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -75,7 +75,7 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
+greater_than=Groter dan
 group=Groep
 group_nearby_events=Group nearby events
 groups=Groepen
@@ -215,7 +215,7 @@ service_url=Service URL
 share=Share
 share_with_other_people=Share with others
 sharing_settings=Instellingen voor delen
-show=Show
+show=Tonen
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Toon informatie
 show_lon_lat=Toon lengtegraad/breedtegraad
