fc081d8 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -14,7 +14,7 @@ boundary_layer=Boundary layer
 by_data_element=Volgens gegevenselement
 cancel=Annuleren
 can_edit_and_view=Kan bewerken en bezichtigen
-can_view=Can view
+can_view=Kan bekijken
 chart=Grafiek
 classes_method=Classes / method
 clear=Duidelijk
@@ -180,7 +180,7 @@ point_radius=Puntradius
 population_density=Population density
 precipitation=Neerslag
 predefined=Voorgedefinieerd
-previous=Previous
+previous=Vorige
 program=Programma
 program_indicators=Programmaindicators
 public_access=Publieke toegang
@@ -192,7 +192,7 @@ remove=Verwijderen
 rename=Rename
 reporting_rates=Rapporteringsgraden
 revision=Revision
-search=Search
+search=Zoek
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
 select=Selecteer
@@ -212,7 +212,7 @@ select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=Share
+share=Deel
 share_with_other_people=Share with others
 sharing_settings=Instellingen voor delen
 show=Tonen
