6f1a67a fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -263,10 +263,10 @@ value_type=Tipo de Valor
 variance=Varianza
 version=Versi\u00f3n
 weekly=Semanal
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=Semanal (Inicio mi\u00e9rcoles)
+weekly_thursday=Semanal (Inicio jueves)
+weekly_saturday=Semanal (Inicio s\u00e1bado)
+weekly_sunday=Semanal (Inicio domingo)
 write_interpretation=Escribir interpretaci\u00f3n
 write_your_interpretation=Escriba su intepretaci\u00f3n
 yearly=Anual
