1110d8b fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -122,7 +122,7 @@ legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Legend type
+legend_type=Legenda type
 level=Niveau
 longitude=Lengtegraad
 low_color_size=Low color / size
@@ -254,10 +254,10 @@ totals=Totalen
 update=Bijwerken
 username=Gebruikersnaam
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
-user_organisation_unit=User organisation unit
+user_organisation_unit=Gebruikersorganisatie-eenheid
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=Subeenheden van gebruikers
+user_sub_x2_units=Gebruiker sub-x2-eenheden
 value=Waarde
 value_type=Value type
 variance=Variantie
