d6cafea fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_km.properties
+++ b/i18n/i18n_app_km.properties
@@ -85,7 +85,7 @@ high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
 home=\u1795\u17d2\u1791\u17b6\u17c6\u1784\u178a\u17be\u1798
-indicator=Indicator
+indicator=\u179f\u17bd\u1785\u1793\u17b6\u1780\u179a
 indicator_group=Indicator group
 information=Information
 infrastructural_data=Infrastructural data
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=\u1794\u17d2\u179a\u1785\u17b6\u17c6\u1786\u17d2\u1793\u17b6\u17c6
 yes=\u1794\u17b6\u1791/\u1785\u17b6\u179f
-yesterday=Yesterday
+yesterday=\u1780\u17b6\u179b\u1796\u17b8\u1798\u17d2\u179f\u17b7\u179b\u1798\u17b7\u1789
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
