--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -233,7 +233,7 @@ sub_x2_units=Sub-x2-units
 sum=Som
 swap_lon_lat=Wissel lengtegraad/breedtegraad
 symbol_layer=Facility layer
-table=Table
+table=Tafel
 temperature=Temperatuur
 text_filter=Text filter
 thematic_layer=Thematische laag
