5f5e399 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_es_419.properties
+++ b/i18n/i18n_app_es_419.properties
@@ -181,14 +181,14 @@ population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
 previous=Previous
-program=Program
+program=Programa
 program_indicators=Program indicators
 public_access=Public access
 quarterly=Quarterly
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remove
+remove=Eliminar
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
@@ -221,7 +221,7 @@ show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
 sixmonthly=Six-monthly
 sixmonthly_april=Six-monthly April
-stage=Stage
+stage=Etapa
 start_date=Start date
 start_end_dates=Start/end dates
 start_end_value=Start/end value
