--- a/i18n/i18n_app_pt_BR.properties
+++ b/i18n/i18n_app_pt_BR.properties
@@ -3,7 +3,7 @@ add_legend=Add legend
 add_new=Adicionar novo
 address=Endere\u00e7o
 add_to_dashboard=Adicionar ao painel de instrumentos
-aggregation_type=Aggregation type
+aggregation_type=Tipo de agregac\u00e3o
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
@@ -27,7 +27,7 @@ coordinates=Coordenadas
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Contagem
 create=Criar
-created_by=Created by
+created_by=Criado por
 current_legends=Current legends
 daily=Di\u00e1rio
 data=Dados
@@ -166,7 +166,7 @@ organisationunit_search=Busca de unidade organizacional
 osm_light=OSM Light
 overwrite=Sobrescrever
 overwrite_favorite=Overwrite favorite
-page=Page
+page=P\u00e1gina
 parent_unit=Parent unit
 period=Per\u00edodo
 period_type=Tipo de per\u00edodo
@@ -180,10 +180,10 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefinido
-previous=Previous
+previous=Anterior
 program=Programa
 program_indicators=Program indicators
-public_access=Public access
+public_access=Acesso p\u00fablico
 quarterly=Trimestral
 relative=Relativo
 relocate=Realocar
