4171e87 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -175,7 +175,7 @@ placement=Posici\u00f3n
 please_create_map_first=Por favor, cree un mapa primero
 please_enter_a_name=Entrar un nombre
 please_enter_map_title=Por favor, introduzca el t\u00edtulo del mapa
-point_color=Point color
+point_color=Color de punto
 point_radius=Point radius
 population_density=Densidad de poblaci\u00f3n
 precipitation=Precipitaci\u00f3n
