--- a/i18n/i18n_app_lo.properties
+++ b/i18n/i18n_app_lo.properties
@@ -53,7 +53,7 @@ end_date=\u0ea7\u0eb1\u0e99\u0e97\u0eb5\u0eaa\u0eb8\u0e94\u0e97\u0ec9\u0eb2\u0e8
 end_value_should_be_bigger_than_start_value=\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99\u0eaa\u0eb8\u0e94\u0e97\u0ec9\u0eb2\u0e8d\u0e84\u0ea7\u0e99\u0ec3\u0eab\u0ec8\u0e8d\u0e81\u0ec8\u0ea7\u0eb2\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99\u0e8a\u0eb8\u0e94\u0e97\u0eb3\u0ead\u0eb4\u0e94
 equal_counts=Equal counts
 equal_intervals=Equal intervals
-event_data_item=Event data item
+event_data_item=\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99\u0ea5\u0eb2\u0e8d\u0e9a\u0eb8\u0e81\u0e84\u0ebb\u0e99
 event_data_items=\u0e82\u0ecd\u0ec9\u0ea1\u0eb9\u0e99\u0ea5\u0eb2\u0e8d\u0e9a\u0eb8\u0e81\u0e84\u0ebb\u0e99
 event_layer=Event layer
 event_location=Event location
@@ -210,7 +210,7 @@ select_program=\u0e82\u0eb0\u0ec1\u0edc\u0e87\u0e97\u0eb5\u0ec8\u0e96\u0eb7\u0e8
 select_service=Select service
 select_stage=Select stage
 select_sub_units=\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0eab\u0ebb\u0ea7\u0edc\u0ec8\u0ea7\u0e8d\u0ec3\u0e99\u0edc\u0eb4\u0e97\u0eb1\u0e87\u0edd\u0ebb\u0e94
-select_year=Select year
+select_year=\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0e9b\u0eb5
 service_url=Service URL
 share=\u0ec0\u0e9c\u0eb5\u0e8d\u0ec1\u0e9c\u0ec8
 share_with_other_people=\u0ec1\u0e9a\u0ec8\u0e87\u0e9b\u0eb1\u0e99\u0e81\u0eb1\u0e9a\u0e84\u0ebb\u0e99\u0ead\u0eb7\u0ec8\u0e99
@@ -254,7 +254,7 @@ totals=\u0ea5\u0ea7\u0ea1\u0e97\u0eb1\u0e87\u0edd\u0ebb\u0e94
 update=\u0e9b\u0eb1\u0e9a\u0e9b\u0eb8\u0e87
 username=\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
-user_organisation_unit=User organisation unit
+user_organisation_unit=\u0eab\u0e99\u0ec8\u0ea7\u0e8d\u0e87\u0eb2\u0e99\u0ead\u0ebb\u0e87\u0e81\u0eb2\u0e99\u0e88\u0eb1\u0e94\u0e95\u0eb1\u0ec9\u0e87\u0e82\u0ead\u0e87\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9
 user_ou=\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0e9b\u0eb0\u0ec0\u0e97\u0e94
 user_sub_units=\u0eab\u0ebb\u0ea7\u0edc\u0ec8\u0ea7\u0e8d\u0e8d\u0ec8\u0ead\u0e8d\u0e82\u0ead\u0e87\u0e97\u0ec8\u0eb2\u0e99
 user_sub_x2_units=\u0eab\u0ebb\u0ea7\u0edc\u0ec8\u0ea7\u0e8d\u0e8d\u0ec8\u0ead\u0e8d\u0e82\u0eb1\u0ec9\u0e99\u0eaa\u0ead\u0e87\u0e82\u0ead\u0e87\u0e97\u0ec8\u0eb2\u0e99
@@ -263,10 +263,10 @@ value_type=Value Type
 variance=\u0e84\u0ea7\u0eb2\u0ea1\u0ec1\u0e95\u0e81\u0e95\u0ec8\u0eb2\u0e87
 version=\u0ea5\u0eb9\u0ec9\u0e99
 weekly=\u0ec0\u0e9b\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=\u0ec0\u0e9b\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94 (\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0e88\u0eb2\u0e81\u0ea7\u0eb1\u0e99\u0e9e\u0eb8\u0e94)
+weekly_thursday=\u0ec0\u0e9b\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94 (\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0e88\u0eb2\u0e81\u0ea7\u0eb1\u0e99\u0e9e\u0eb0\u0eab\u0eb1\u0e94)
+weekly_saturday=\u0ec0\u0e9b\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94 (\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0e88\u0eb2\u0e81\u0ea7\u0eb1\u0e99\u0ec0\u0eaa\u0ebb\u0eb2)
+weekly_sunday=\u0ec0\u0e9b\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94 (\u0ec0\u0ea5\u0eb5\u0ec8\u0ea1\u0e88\u0eb2\u0e81\u0ea7\u0eb1\u0e99\u0ead\u0eb2\u0e97\u0eb4\u0e94)
 write_interpretation=\u0e82\u0ebd\u0e99\u0e84\u0ea7\u0eb2\u0ea1\u0edd\u0eb2\u0e8d
 write_your_interpretation=Write your interpretation
 yearly=\u0ea5\u0eb2\u0e8d\u0e9b\u0eb5
