38526c8 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_ne.properties
+++ b/i18n/i18n_app_ne.properties
@@ -29,7 +29,7 @@ count=Count
 create=\u0938\u093f\u0930\u094d\u091c\u0928\u093e \u0917\u0930\u094d\u0928\u0941\u0939\u094b\u0938\u094d
 created_by=Created by
 current_legends=Current legends
-daily=Daily
+daily=\u0926\u0948\u0928\u093f\u0915
 data=Data
 data_and_periods=Data and periods
 dataelement=Data element
@@ -168,7 +168,7 @@ overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Period
+period=\u0905\u092c\u0927\u093f
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -249,7 +249,7 @@ this_sixmonth=This six-month
 this_week=This week
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=\u0906\u091c
 totals=Totals
 update=Update
 username=Username
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Yearly
 yes=Yes
-yesterday=Yesterday
+yesterday=\u0939\u093f\u091c\u094b
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
