6d15ee5 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -175,7 +175,7 @@ placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
 please_enter_map_title=Please enter a map title
-point_color=Point color
+point_color=Puntkleur
 point_radius=Puntradius
 population_density=Population density
 precipitation=Neerslag
