2a74571 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_es_419.properties
+++ b/i18n/i18n_app_es_419.properties
@@ -254,7 +254,7 @@ totals=Totals
 update=Actualizar
 username=Nombre de usuario
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
-user_organisation_unit=User organisation unit
+user_organisation_unit=Unidad organizativa del usuario
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
